--- a/fly.toml
+++ b/fly.toml
@@ -16,7 +16,22 @@ primary_region = 'ams'
   min_machines_running = 1
   processes = ['app']
 
+[[services.ports]]
+  handlers = ["http"]
+  port = 80
+  force_https = true
+
 [[vm]]
   memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
+
+[[services.http_checks]]
+    interval = 10000
+    grace_period = "5s"
+    method = "get"
+    path = "/"
+    protocol = "http"
+    timeout = 2000
+    tls_skip_verify = false
+    [services.http_checks.headers]
