--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.16'
     implementation 'org.postgresql:postgresql:42.6.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+    implementation 'io.prometheus:prometheus-metrics-core:1.3.6'
+    implementation 'io.prometheus:prometheus-metrics-instrumentation-jvm:1.3.6'
+    implementation 'io.prometheus:prometheus-metrics-exporter-httpserver:1.3.6'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
