--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'io.prometheus:prometheus-metrics-exporter-httpserver:1.3.6'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'io.sentry:sentry:6.12.0'
 }
 
 test {
