--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id "io.sentry.jvm.gradle" version "5.6.0"
 }
 
 group = 'dev.aikido'
@@ -27,7 +28,6 @@ dependencies {
     implementation 'io.prometheus:prometheus-metrics-exporter-httpserver:1.3.6'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'io.sentry:sentry:6.12.0'
 }
 
 test {
@@ -41,4 +41,12 @@ shadowJar {
                 'Main-Class': 'dev.aikido.JavalinPostgres'
         )
     }
+}
+
+sentry {
+    includeSourceContext = true
+
+    org = "aikido-security-zen-demo-apps"
+    projectName = "zen-demo-java"
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
